# keywords-monorepo

./: .dockerignore  .gitignore  Cargo.toml  docker-compose.yml  package-lock.json  package.json
apps/rust-api/: .gitignore  Cargo.toml  Dockerfile
apps/rust-api/src/: lib.rs  main.rs  output.rs  read_csv.rs  replace.rs
apps/rust-api/src/database/: mod.rs
apps/rust-api/src/kw_list/: input_list.rs  mod.rs
apps/rust-api/src/read_input/: mod.rs
apps/rust-api/src/server/: mod.rs
apps/web/: Dockerfile  middleware.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/upload/: page.tsx  upload.module.css  uploadData.tsx
src/: lib.rs  main.rs  read_csv.rs  replace.rs
src/kw_list/: input_list.rs  mod.rs
src/read_input/: mod.rs
