[package]
name = "keywords"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
dotenv = "0.15.0"
postgres = "0.19.7"
openssl = "0.10.63"
postgres-openssl = "0.5.0"
actix-web = "4.5.1"
actix-cors = "0.7.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
